# allora-forge-builder-kit

./: .gitignore  AGENTS.md  AGENT_GUIDE.md  AGENT_NOTES.md  ARCHITECTURE.md  CHANGELOG.md  README.md  SKILLS.md  V2_RELEASE_UPDATES.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
allora_forge_builder_kit/: __init__.py  allora_data_manager.py  atlas_data_manager.py  base_data_manager.py  binance_data_manager.py  data_manager.py  data_manager_factory.py  evaluation.py  topic_discovery.py  utils.py  web_dashboard.py  worker_manager.py  worker_monitor.py  worker_runtime.py  workerctl.py  workflow.py
allora_ml_workflow/: __init__.py  workflow.py
allora_research_model_skills/: README.md
notebooks/: Allora Forge Builder Kit.ipynb  Allora Forge ML Workflow.ipynb  Allora Forge Signal Miner Stashed.ipynb  Allora Forge Signal Miner.ipynb  Allora Wallet Creator.ipynb  Data Manager Demo.ipynb  Topic 69 - Bitcoin Price Prediction.ipynb  build_safe_predict_pkl.py  deploy_worker.py  deploy_worker_grid.py  deploy_worker_raw.py  deploy_worker_topic_37.py  deploy_worker_topic_77.py  example_signal_miner_grid_search.py  example_topic_37_solana_5min_walkthrough.py  example_topic_69_bitcoin_prediction.py  example_topic_69_bitcoin_walkthrough.py  example_topic_77_bitcoin_5min_walkthrough.py  example_topic_79_btc_volatility_walkthrough.py  export_predict_original_style.py  export_predict_self_contained.py  requirements_worker_runtime.txt  topic37_base_window_grid.py  topic37_base_window_microgrid.py  topic37_model_sweep.py  topic37_rf_5m60_grid.py  topic37_ta_feature_grid.py  topic37_tinybars_ensemble.py  topic37_tinybars_followup.py  topic37_tinybars_grid.py  topic69_model_sweep.py  topic69_year_holdout_train.py  topic_79_model_a_deep_lookback.py  topic_79_model_b_multiscale.py  topic_79_model_c_neural.py  topic_79_model_d_iterative.py
notebooks/shared/: deploy_worker.py  (+1 more)
tests/: README.md  conftest.py  test_data_managers.py  test_evaluation.py  test_feature_integrity.py  test_get_live_features_remote_only.py  test_live_features_consistency.py  test_target_integrity.py  test_volatility_target.py  test_worker_manager.py  test_worker_monitor.py  test_worker_runtime.py
(+25 files in other folders)
