[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allora-forge-builder-kit"
version = "3.0.0"
description = "Allora ML Workflow Utilities — build, evaluate, and deploy models to the Allora Network"
authors = [{ name = "Tim DeLise", email = "tim@alloralabs.xyz" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "lightgbm",
    "requests",
    "dill",
    "polars",
    "pyarrow",
    "pytz",
    "numba",
    "scipy",
    "allora-sdk>=1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "websocket-client",
]
binance = [
    "websocket-client",
]
deploy = [
    "cloudpickle",
]

[project.urls]
Homepage = "https://github.com/allora-network/allora-forge-builder-kit"

[tool.setuptools.packages.find]
include = ["allora_forge_builder_kit"]
